--- a/style.css
+++ b/style.css
@@ -16,6 +16,20 @@ main{
     overflow: hidden;
 }
 
+ul{
+    display: flex;
+    flex-direction: row;
+    
+    align-items: center;
+    justify-content: center;
+    justify-content: space-around;
+    
+    list-style: none;
+    
+    width: 100%;
+}
+
+
 
 /* Styles NavBar */
 
@@ -28,18 +42,8 @@ nav{
     background-color: #1b1b1b;
 }
 
-ul{
-    display: flex;
-    flex-direction: row;
-    
-    align-items: center;
-    justify-content: center;
-    justify-content: space-around;
-    
-    list-style: none;
-    
-    width: 100%;
-    
+nav ul{
+    background-color: #1b1b1b;
 }
 
 li a{
@@ -98,17 +102,36 @@ section img{
 
 .container{
     width: 100%;
-    height: 500px;
+    height: 1500px;
 
-    margin-top: 50px;
     padding: 20px;
 
     background-color: #555151;
 }
 
+.container h2{
+    display: flex;
+    justify-content: center;
+
+    color: #ffefdb;
+
+    font-family: Titillium Web;
+    font-size: 75px;
+    font-weight: 900;
+}
+
+.container ul {
+    display: flex;
+    flex-wrap: wrap;
+
+    padding: 50px;
+}
+
 .card{
     width: 300px !important;
     height: 300px !important;
+
+    margin-top: 150px;
 
     display: flex;
     align-items: center;
@@ -117,8 +140,8 @@ section img{
 }
 
 .card img{
-    width: 100px;
-    height: 100px;
+    width: 450px;
+    height: 250px;
 
-    margin-top: -30px;
+    margin-top: -120px;
 }
