--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap');
 
 
+/* ______________________________________________________ */
 /* Styles gerais */
 
 *{
@@ -9,6 +10,7 @@
     padding: 0;
 
     max-width: 1580px;
+    transition: inherit;
 }
 
 main{
@@ -30,7 +32,7 @@ ul{
 }
 
 
-
+/* ______________________________________________________ */
 /* Styles NavBar */
 
 nav{
@@ -53,15 +55,16 @@ li a{
     font-family: League Spartan;
     font-weight: 900;
     font-size: 25px;
+    transition: 0.5s;
 }
 
 li a:hover{
     color: #ffffff;
     text-shadow: 0.1em 0.1em 0.2em #ffefdb;
-    transition: 0.5s;
 }
 
 
+/* ______________________________________________________ */
 /* Styles h1 e foto */
 
 section{
@@ -98,12 +101,14 @@ section img{
 }
 
 
+/* ______________________________________________________ */
 /* Linguagens */
 
 .container{
     width: 100%;
     height: 1500px;
 
+    padding-top: 20px;
     padding: 20px;
 
     background-color: #555151;
@@ -137,11 +142,70 @@ section img{
     align-items: center;
 
     background-color: #9F9689;
+    transition: 1s;
+}
+
+.card:hover{
+
 }
 
 .card img{
     width: 450px;
     height: 250px;
 
-    margin-top: -120px;
+    margin-top: -125px;
+}
+
+.card h3{
+    display: flex;
+    flex-direction: row;
+    justify-content: center !important;
+
+    color: #1b1b1b;
+
+    font-family: Titillium Web;
+    font-size: 25px;
+    font-weight: 900;
+}
+
+/* ______________________________________________________ */
+/* Section - Ferramentas */
+
+.itensTitle{
+    display: flex;
+    justify-content: center;
+
+    color: #9F9689;
+    font-family: Titillium Web;
+    font-weight: 800;
+    font-size: 50px;
+}
+
+@keyframes slide {
+    0% {
+        transform: translateX(0);
+    }
+    50% {
+        transform: translateX(-30%);
+    }
+}
+
+.logos {
+    overflow: hidden;
+
+    border-top: 5px solid #1b1b1b;
+    border-bottom: 5px solid #1b1b1b;
+
+    padding: 60px 0;
+}
+
+.logos-slider {
+    display: flex;
+    flex-wrap: nowrap; 
+    animation: 7s slide infinite linear;
+}
+
+.logos-slider img {
+    height: 50px;
+    margin: 0 40px;
 }
