--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ section img{
     padding: 50px;
 }
 
-.card{
+.linguagem{
     width: 300px !important;
     height: 300px !important;
 
@@ -143,16 +143,16 @@ section img{
     transition: 1s;
 }
 
-.card img{
+.linguagem img{
     width: 450px;
     height: 250px;
 }
 
-.card:hover img{
+.linguagem:hover img{
     margin-top: -125px;
 }
 
-.card h3{
+.linguagem h3{
     display: flex;
     flex-direction: row;
     justify-content: center !important;
@@ -165,7 +165,7 @@ section img{
     opacity: 0;
 }
 
-.card:hover h3{
+.linguagem:hover h3{
     opacity: 1;
 }
 
@@ -263,6 +263,129 @@ section img{
         transform: translateY(-2000px); 
     } 
 
+}
+
+
+/*_________________________________________________________ */
+/* Meus Projetos */
+
+.h1{
+    margin-top: 50px;
+    margin-bottom: 30px;
+
+    font-size: 45px;
+    text-align: center;
+    
+    border-bottom: 1px solid #522B5B;
+    color: #854F6C;
+}
+
+.wrapper {
+    width: 100%;
+    height: 65vh;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.poject   {
+    height: 400px;
+
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: start;
+}
+
+.projetos {
+    width: 80px;
+    margin: 0 10px;
+
+    display: flex;
+
+    border-radius: .75rem;
+    border-radius: 2rem;
+
+    background-size: cover;
+    background-color: #190919;
+    box-shadow: 0px 10px 30px -5px rgba(0,0,0,0.8);
+
+    cursor: pointer;
+    overflow: hidden;
+    align-items: flex-end;
+
+    transition: .6s cubic-bezier(.28,-0.03,0,.99);
+}
+
+.projetos > .row {
+    display: flex;
+    flex-wrap: nowrap;
+
+    color: #854F6C;
+}
+
+.projetos > .row > .icon {
+    margin: 15px;
+    width: 50px;
+    border-radius: 50%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background: #522B5B;
+    color: #DFB6B2;
+}
+
+.projetos > .row > .description {
+    width: 520px;
+    height: 80px;
+
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
+    overflow: hidden;
+    
+    opacity: 0;
+    transform: translateY(30px);
+    transition-delay: .3s;
+    transition: all .3s ease;
+}
+
+.description p {
+    color: #DFB6B2;
+    padding-top: 5px;
+}
+
+.description h4 {
+    text-transform: uppercase;
+}
+
+input {
+    display: none;
+}
+
+input:checked + label {
+    width: 600px;
+}
+
+input:checked + label .description {
+    opacity: 1 !important;
+    transform: translateY(0) !important;
+}
+
+.projetos[for="c1"] {
+    background-image: url('ferramentas/apache.png');
+}
+.projetos[for="c2"] {
+    background-image: url('ferramentas/apache.png');
+}
+.projetos[for="c3"] {
+    background-image: url('ferramentas/apache.png');
+}
+.caprojetosrd[for="c4"] {
+    background-image: url('ferramentas/apache.png');
 }
 
 
